# mkdocs-docs-hub

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
example/: mkdocs.yml
example/docs/: components.md  faq.md  index.md
example/docs/reference/: styling-tokens.md  theme-anatomy.md
src/docs_hub/: 404.html  __init__.py  base.html  main.html
src/docs_hub/assets/css/: theme.css
src/docs_hub/assets/js/: theme.js
src/docs_hub/partials/: footer.html  nav-item.html  page-context.html  page-header.html  pagination.html  section-nav.html  sidebar.html  toc.html  topbar.html
src/mkdocs_docs_hub.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
