[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mkdocs-docs-hub"
version = "0.1.0"
description = "Docs Hub - a dashboard-inspired custom MkDocs theme"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "lodgev" }
]
dependencies = ["mkdocs>=1.6"]
keywords = ["mkdocs", "theme", "documentation", "dashboard"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: MkDocs",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache-2.0 License"
]

[project.urls]
Homepage = "https://github.com/lodgev/mkdocs-docs-hub"
Repository = "https://github.com/lodgev/mkdocs-docs-hub"
Issues = "https://github.com/lodgev/mkdocs-docs-hub/issues"

[project.entry-points."mkdocs.themes"]
mkdocs-docs-hub = "mkdocs-docs-hub"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mkdocs-docs-hub = [
  "mkdocs_theme.yml",
  "*.html",
  "partials/*.html",
  "assets/css/*.css",
  "assets/js/*.js",
  "assets/img/*"
]